--- a/README.org
+++ b/README.org
@@ -12,7 +12,7 @@ Note that the default prefix is ".". If you would like make install and
 the clock shell script to use a different directory (such as /usr/local/bin)
 then use the following:
 
-> PREFIX=/usr/local/bin make
+> make PREFIX=/usr/local/bin 
 
 ** Install for non-root use
 
@@ -25,7 +25,7 @@ need to be fixed. In order to do this you should do the following:
 3. copy the file 91-g13.rules into /etc/udev/rules.d/:
   sudo cp 91-g13.rules /etc/udev/rules.d
 4. run udevadm trigger
-5. run: sudo make install 
+5. run: sudo make PREFIX='/usr/local/bin' install 
 
 If you are logged in as the user, you will need to logout and back in.
 
@@ -36,7 +36,7 @@ If you would like to change the name of the group used, then use the following
 option with make to change it: 
 
 > make clean
-> GROUP='newgroup' make 
+> make GROUP='newgroup'
 
 ** Running
 Connect your device, then run ./g13, it should automatically find your device.
