--- a/README.org
+++ b/README.org
@@ -38,20 +38,28 @@ would set M1, M3 and MR, and unset M2).
 
 This binds a key or a stick zone. The possible values of <keyname> for keys are shown upon startup (e.g. G1).
 
-****    <action> can be a key, possible values shown upon startup  (e.g. KEY_LEFTSHIFT).
-****    <action> can be multiple keys,  like **bind G1 KEY_LEFTSHIFT+KEY_F1**
-****    <action> can be pipe output, by using ">" followed by text, as in **bind G3 >Hello** - causing "Hello\n" to be written to the output pipe ( /tmp/g13-0_out )
-****    <action> can be a command, by using "!" followed by text, as in **bind G4 !stick_mode KEYS** 
+    <action> can be a key, possible values shown upon startup  (e.g. KEY_LEFTSHIFT).
+    
+    <action> can be multiple keys,  like **bind G1 KEY_LEFTSHIFT+KEY_F1**
+
+    <action> can be pipe output, by using ">" followed by text, as in **bind G3 >Hello** - causing "Hello\n" to be written to the output pipe ( /tmp/g13-0_out )
+
+    <action> can be a command, by using "!" followed by text, as in **bind G4 !stick_mode KEYS** 
 
 *** stickmode <mode>
 
 The stick can be used as an absolute input device or can send key events. You can change modes to one of the following:
 
     **KEYS**        translates stick movements into key / action bindings
+    
     **ABSOLUTE**
+    
     **RELATIVE**
+    
     **CALCENTER**   calibrate stick center position
+    
     **CALBOUNDS**   calibrate stick boundaries
+    
     **CALNORTH**    calibrate stick north
   
 *** stickzone <operation> <zonename> <args>
@@ -59,8 +67,11 @@ The stick can be used as an absolute input device or can send key events. You ca
 where <operation> can be
 
      **add** add a new zone named **zonename**
+     
      **del** remove zone named **zonename**
+     
      **action** set action for zone 
+     
      **bounds** set boundaries for zone, **args** are X1, Y1, X2, Y2, where X1/Y1 are top left, X2/Y2 are bottom right, values are floating point from 0.0 to 1.0 
 
 Default created zones are LEFT, RIGHT, UP and DOWN.
